# PokeBin

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  battleItems.json  build.rs  build.sh  build.zig  build.zig.zon  compress-wasm.sh  create_schema.sh  dev-docker-compose.yml  docker-compose.yml  dockerfile  flake.nix  flint.zon  items.json  moves.json  nginx.conf  pokemon.json  pyproject.toml  robots.txt  run.sh  test.py  tour_fetch.py
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: docker-build.yml
data/: items.js  items.json  pokemon.json
extension/: README.md  build.sh  chrome_manifest.json  firefox_manifest.json  package.json  prepare_zip.sh  rsbuild.config.ts
extension/src/: Import.tsx  OtsBattleUpload.tsx  Upload.tsx  encryption.ts  helpers.ts  inject_chrome.ts  inject_firefox.ts  main.tsx  types.ts  wasm.ts
home/: 0.png.br  1.png.br  10.png.br  100.png.br  1000.png.br  10001.png.br  10002.png.br  10003.png.br  10004.png.br  10006.png.br  10007.png.br  10008.png.br  10009.png.br  1001.png.br  10010.png.br  10011.png.br  10012.png.br  10013.png.br  10014.png.br  10015.png.br  10016.png.br  10017.png.br  10018.png.br  10019.png.br  1002.png.br  10020.png.br  10021.png.br  10022.png.br  10023.png.br  10024.png.br  10026.png.br  10027.png.br  10028.png.br  10029.png.br  1003.png.br  10030.png.br  10031.png.br  10032.png.br  10033.png.br  10034.png.br  (+1465 more)
home/female/: 10235.png.br  111.png.br  112.png.br  118.png.br  119.png.br  12.png.br  123.png.br  129.png.br  130.png.br  133.png.br  154.png.br  165.png.br  166.png.br  178.png.br  185.png.br  186.png.br  19.png.br  190.png.br  194.png.br  195.png.br  198.png.br  20.png.br  202.png.br  203.png.br  207.png.br  208.png.br  212.png.br  214.png.br  215.png.br  217.png.br  221.png.br  224.png.br  229.png.br  232.png.br  25.png.br  256.png.br  257.png.br  26.png.br  267.png.br  269.png.br  (+61 more)
items/: abilityshield.png.br  abomasite.png.br  absolite.png.br  absolitez.png.br  absorbbulb.png.br  adamantcrystal.png.br  adamantorb.png.br  adrenalineorb.png.br  aerodactylite.png.br  aggronite.png.br  aguavberry.png.br  airballoon.png.br  alakazite.png.br  aloraichiumz.png.br  altarianite.png.br  ampharosite.png.br  apicotberry.png.br  armorfossil.png.br  aspearberry.png.br  assaultvest.png.br  audinite.png.br  auspiciousarmor.png.br  babiriberry.png.br  banettite.png.br  barbaracite.png.br  baxcalibrite.png.br  beastball.png.br  beedrillite.png.br  belueberry.png.br  berryjuice.png.br  berrysweet.png.br  bignugget.png.br  bigroot.png.br  bindingband.png.br  blackbelt.png.br  blackglasses.png.br  blacksludge.png.br  blastoisinite.png.br  blazikenite.png.br  blueorb.png.br  (+445 more)
screenshot/: index.ts  package.json  response.json  tsconfig.json
scripts/: .envrc  build.zig  build.zig.zon  bun.lockb  compress_images.py  convert-battle-items.ts  fetch_images.py  fetch_item_images.py  fetch_items.py  fetch_moves.py  fetch_pokemon.py  flake.nix  generate_missing_images.py  items.js  package.json  pyproject.toml
scripts/src/: download-imgs.zig  main.zig
src/: brotli.zig  constants.zig  db.rs  download_images.rs  download_images_archive.rs  helpers.rs  main.rs  main.zig  okredis.zig  png_utils.zig  psql.zig  root.zig  routes.zig  shutdown.zig  state.zig  templates.rs  utils.rs  utils.zig  ws.zig  wslog.zig
standings/: build.zig  build.zig.zon  flint.zon
templates/: paste.html
wasm/: crypto.zig  data.zig  items.json  missing_shiny.json  moves.json  packed.zig  pokemon.json  utils.zig  wasm.zig  web_wasm.zig
web/: .oxfmtrc.json  .oxlintrc.json  about.html  biome.json  bun.lockb  flint.zon  index.html  package.json  paste.html  pnpm-lock.yaml  rsbuild.config.ts  svelte.config.js  tailwind.config.js  template.html  tsconfig.json  vite.config.ts  watch_files.sh
web/html/: tos.html  (+7 more)
(+4209 files in other folders)
