cargo-features = ["codegen-backend"]
[package]
name = "pokebin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "0.8.11"
h2 = "0.4.4"
anyhow = "1.0.79"
askama = "0.12.1"
axum = "0.7.3"
blowfish = "0.9.1"
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive"] }
deku = "0.16.0"
dotenv = "0.15.0"
fancy-regex = "0.13.0"
futures = "0.3.30"
futures-util = "0.3.30"
generic-array = "1.0.0"
hex = "0.4.3"
http = "1.0.0"
lazy_static = "1.4.0"
log = "0.4.20"
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.2"
reqwest = { version = "0.11.23", default_features = false, features = [
  "rustls-tls",
  "serde_json",
  "async-compression",
  "json",
  "trust-dns",
  "gzip",
  "brotli",
] }
scraper = "0.18.1"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
sqlx = { version = "0.7.3", default_features = false, features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec", "full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["trace", "fs", "cors"] }
tracing = "0.1.40"
trunkrs = "0.2.7"
typenum = "1.17.0"
utapi-rs = "0.1.2"
whoami = "1.5.0"

[dev-dependencies]
h2 = "0.4.4"
mio = "0.8.11"
whoami = "1.5.0"

[profile.release]
lto = "off"
codegen-units = 1
panic = "abort"
opt-level = 3
codegen-backend = "cranelift"
